# roscompile

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  manifest.xml  package.xml  setup.cfg  setup.py  stdeb.cfg
data/: cmake.ignore  cmake_patterns.ignore  package.ignore  package_patterns.ignore
magical_ros2_conversion_tool/: CMakeLists.txt  README.md  package.xml  setup.py
magical_ros2_conversion_tool/scripts/: ros2_conversion
magical_ros2_conversion_tool/src/magical_ros2_conversion_tool/: cmake.py  cplusplus.py  generators.py  manifest.py  pythonic.py  util.py
ros_introspection/: CMakeLists.txt  README.md  package.xml  setup.py
ros_introspection/scripts/: print_packages.py
ros_introspection/src/ros_introspection/: cmake.py  cmake_parser.py  launch.py  package.py  package_structure.py  package_xml.py  plugin_xml.py  resource_list.py  ros_generator.py  rviz_config.py  setup_py.py  source_code.py  source_code_file.py  urdf.py  util.py
ros_introspection/test/: parse_repos_test.py
roscompile/: CMakeLists.txt  README.md  package.xml  setup.py
roscompile/data/: cmake.ignore  cmake_patterns.ignore  package.ignore  package_patterns.ignore  rviz_class_defaults.yaml  rviz_global_defaults.yaml
roscompile/scripts/: add_compile_options  add_tests  convert_to_format_2  noetic_migration  roscompile  roscompile_command  roscompile_interactive  upgrade_manifest
roscompile/src/roscompile/: __init__.py  cmake.py  diff.py  generators.py  installs.py  manifest.py  misc.py  plugins.py  python_setup.py  terminal.py  util.py  zipfile_interface.py
roscompile/test/: hows_my_coverage.py  manual_test.py  utest.py  zipfile_interface.py
scripts/: add_roslint  convert_to_format_2  roscompile
src/: roscompile
src/roscompile/: cmake.py  cmake_parser.py  config.py  launch.py  package.py  package_xml.py  people_management.py  plugin_xml.py  resource_list.py  setup_py.py  source.py  util.py
test/: format_cmakes.py
