<?xml version="1.0"?>
<package format="2">
  <name>ros_introspection</name>
  <version>1.0.2</version>
  <description>The ros_introspection package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosmsg</depend>
  <exec_depend>python-requests</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <test_depend>roslint</test_depend>

</package>
