<?xml version="1.0"?>
<package format="2">
  <name>roscompile</name>
  <version>1.0.2</version>
  <description>The roscompile package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>catkin</depend>
  <depend>ros_introspection</depend>
  <depend>python-click</depend>
  <exec_depend>python-argparse</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>pluginlib</test_depend>
  <test_depend>pluginlib_tutorials</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>tf</test_depend>

</package>
