<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roscompile</name>
  <version>1.2.1</version>
  <description>The roscompile package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  <depend>catkin</depend>
  <depend>ros_introspection</depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-argparse</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-click</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-click</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>pluginlib</test_depend>
  <test_depend>pluginlib_tutorials</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rviz_plugin_tutorials</test_depend>
  <test_depend>stereo_msgs</test_depend>
  <test_depend>tf</test_depend>

</package>
